# accio

./: .gitignore  2010-09-28-seattle-part-1.md  compose.yaml  docker-compose.yaml  docker-compose.yml  netlify.toml  package-lock.json  package.json  pelican-conf.py  pelicanconf.py  post-template.md  publishconf.py  pyproject.toml  requirements.txt
ci/: check-urls.py  check-urls.sh  gen-github-workflows.py  gen.py
content/: 2001-02-10-married-conversations.md  2007-08-16-coincidences.md  2007-08-18-spam.md  2007-08-22-feeling-scrabbly.md  2007-08-23-movie-star.md  2007-09-15-sonnet-60.md  2007-12-14-wedding-memories.md  2007-12-20-christmas-traditions.md  2007-12-27-christmas-in-waco.md  2007-12-30-choppers.md  2007-12-30-christmas-in-new-braunfels.md  2008-01-01-new-years-eve.md  2008-01-08-another-family-wedding.md  2008-01-10-utah.md  2008-01-15-crop-walk.md  2008-01-17-hobbies.md  2008-01-20-my-first-29th-birthday.md  2008-01-20-not-digital.md  2008-01-24-mmmm-milkshakes.md  2008-01-27-this-week.md  2008-01-29-at-work.md  2008-02-01-towed.md  2008-02-03-towed.md  2008-02-06-cruising.md  2008-02-07-ghost-town.md  2008-02-10-married-conversations.md  2008-02-15-awesome-wife.md  2008-02-15-heisman-hijinks.md  2008-02-21-coincidences.md  2008-02-24-highest-height.md  2008-02-26-changed-my-life.md  2008-02-27-crop-walk.md  2008-03-02-start-the-day-right.md  2008-03-03-carries-birthday.md  2008-03-03-crop-walk.md  2008-03-03-explore-ut.md  2008-03-04-marks-birthday.md  2008-03-04-shutt-birthdays.md  2008-03-13-bulldozer.md  2008-03-13-miss-pettigrew.md  (+189 more)
(+295 files in other folders)
